--- a/Style.css
+++ b/Style.css
@@ -269,6 +269,7 @@
     margin-bottom: 40px;
     margin-left: 10px;
     margin-right: 10px;
+    background-position-x: center;
 }
 
 /* box 2 */
@@ -285,6 +286,7 @@
     background-size: cover;
     margin: 10px;
     margin-bottom: 45px;
+    background-position-x: center;
 }
 
 .second-img{
@@ -293,6 +295,7 @@
     width: 50%;
     background-size: cover;
     margin: 10px;
+    background-position-x: center;
 }
 
 .second-block{
@@ -307,6 +310,7 @@
     width: 50%;
     background-size: cover;
     margin: 10px;
+    background-position-x: center;
 }
 
 .forth-img{
@@ -315,6 +319,7 @@
     width: 50%;
     background-size: cover;
     margin: 10px;
+    background-position-x: center;
 }
 
 .img-name{
