--- a/Style.css
+++ b/Style.css
@@ -425,16 +425,11 @@
     padding-bottom: 10px;
 }
 
-.content-1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #f3f3f3;
-}
-
 .content-2{
     display: flex;
     justify-content: center;
     align-items: center;
     color: #f3f3f3;
+    font-weight: 500;
+    font-size: 20px;
 }
